--- a/express-api/package.json
+++ b/express-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "ts-standard",
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev --exit-child --watch src src/index.ts",
     "build": "node build/index.js"
   },
   "repository": {
@@ -27,5 +27,13 @@
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.2",
     "typescript": "^5.0.4"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "extends": [
+      "./node_modules/ts-standard/eslintrc.json"
+    ]
   }
 }
